--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -427,6 +427,7 @@
 
 .card-title-liquid {
   padding-top: 20px;
+  margin-left: 10px;
 }
 
 .in-progress-message {
